fix video overlapping text on iphone 5s

--- a/src/styles/video/article-more.scss
+++ b/src/styles/video/article-more.scss
@@ -10,6 +10,10 @@
     padding-top: 105px;
   }
 
+  @include media(xxs) {
+    padding-top: 120px;
+  }
+
   .grid-container {
     flex-wrap: wrap;
 
